--- a/SmartStock/Views/Home/InitializeInventory.cshtml
+++ b/SmartStock/Views/Home/InitializeInventory.cshtml
@@ -1,60 +1,86 @@
 ﻿@model SmartStock.Models.Inventory
-@{
-    ViewBag.Title = "Initialize Inventory";
-}
-<h2>@ViewBag.Title</h2>
+@*@model IEnumerable<SmartStock.Models.TInventory>*@
 @using (Html.BeginForm(FormMethod.Post))
 {
-<div class="section">
-
-    @*<div class="item">
-            <div>
-                @Html.LabelFor(Model => Model.)
-                @Html.TextBoxFor(Model => Model.strProductName)
-            </div>
-        </div>*@
-    <div class="item">
-        <div>
-            @Html.TextBoxFor(model => model.Product_Name, new { @placeholder = "Item Name" })
-        </div>
-    </div>
-    <div class="item">
-        <div>
-            @Html.TextBoxFor(model => model.Product_Desc, new { @placeholder = "Item Desc" })
-        </div>
-    </div>
-    <div class="item">
-        <td colspan="2">
-            @Html.DropDownList("catagoryName", "Select a Catagory")
-        </td>
-    </div>
-    <div class="item">
-        <div>
-            @Html.TextBoxFor(model => model.UnitsPerCase, new { @placeholder = "Units Per Case" })
-        </div>
-    </div>
-    <div class="item">
-        <div>
-            @Html.TextBoxFor(model => model.Cases, new { @placeholder = "Case Quantity" })
-        </div>
-    </div>
-    <div class="item">
-        <td colspan="2">
-            @Html.DropDownList("location", "Select a Location")
-        </td>
-    </div>
-    <div class="item">
-        <td colspan="2">
-            @Html.DropDownList("statusName", "Select a Status")
-        </td>
-    </div>
-    @*<div class="item">
-            <td colspan="2">
-                @Html.DropDownList("catagoryName", "Select a Catagory")
-            </td>
-        </div>*@
-</div>
-    <div>
-        <button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fas fa-user-plus"></i> Add-Product</button>
+    <div class="center-up">
+        <form action="initInventory">
+            <table>
+                <tr>
+                    <td colspan="2" style="text-align: center;">
+                        <h1>Initialize Inventory</h1>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="table-label">
+                        @Html.TextBoxFor(model => model.ProductName, new { @placeholder = "Item Name" })
+                    </td>
+                    <td colspan="2">
+                        @Html.DropDownList("catagoryName", "Select a Catagory")
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        @Html.DropDownList("location", "Select a Location")
+                    </td>
+                    <td colspan="2">
+                        @Html.TextBoxFor(model => model.InvCount, new { @placeholder = "Added Amount" })
+                    </td>
+                </tr>
+                <tr>
+                    <td class="table-label">
+                        @Html.TextBoxFor(model => model.Status, new { @placeholder = "Status" })
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2" style="text-align: center;">
+                        <button id="btnAddProduct" name="btnSubmit" value="addproduct" class="button-action"><i class="fas fa-user-plus"></i> Add-Product</button>
+                    </td>
+                    <td colspan="2" style="text-align: center;">
+                        <button id="btnAddProduct" name="btnFinishInit" value="finishinit" class="button-action"><<i class="fa-thin fa-angle-right"></i> Finish</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
     </div>
 }
+@*<table class="table table-striped table-condensed">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(Model => Model.strProductName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.intInvCount)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.strStatus)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.intCatagoryID)
+        </th>
+        <th>
+            @Html.DisplayNameFor(Model => Model.intProductLocationID)
+        </th>
+    </tr>
+
+    @foreach (var item in Model)
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.strProductName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.intInvCount)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.strStatus)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.intCatagoryID)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.intProductLocationID)
+        </td>
+
+    </tr>
+    }
+</table>*@
