cracked dropdown validation

--- a/SmartStock/Views/Profile/CreateItem.cshtml
+++ b/SmartStock/Views/Profile/CreateItem.cshtml
@@ -17,7 +17,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        @Html.DropDownList("catagoryName", "Select a Catagory")
+                        @Html.DropDownList("catagoryName", "Select a Category")
                     </td>
                 </tr>
                 <tr>
