--- a/SmartStock/Views/Profile/CreateUser.cshtml
+++ b/SmartStock/Views/Profile/CreateUser.cshtml
@@ -93,6 +93,7 @@
                 <tr>
                     <td colspan="2" style="text-align: center;">
                         <button id="btnAddUser" name="btnSubmit" value="adduser" class="button-action"><i class="fas fa-user-plus"></i> Add User</button>
+                        <button id="btnBack" name="btnCancel" value="back" class="button-action"><i class="fa-solid fa-arrow-left"></i> Back</button>
                     </td>
                 </tr>
             </table>
